<resources>
    <string name="app_name">Karigar Jobs</string>
    <string name="app_splash_name">Karigar Job</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_email_phone">Phone</string>
    <string name="prompt_userid">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">First Time</string>
    <string name="action_forgot">Forgot Password?</string>
    <string name="action_enterotp">Please enter OTP received</string>
    <string name="action_verotp">Verify OTP</string>
    <string name="action_enternwpwd">Enter new password</string>
    <string name="action_submitpwd">Submit</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Register</string>
    <string name="title_settings">Settings</string>
    <string name="title_shares">Share</string>
    <string name="title_updatemobile">Enter your new mobile number</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_otp">OTP entered is wrong.Please try again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_gender_required">Please select your gender.</string>
    <string name="error_mobile_req">Please check your mobile number.</string>
    <string name="error_english_req">Please choose option for english language</string>
    <string name="error_worlexp_req">Pleaseं choose option for work exp.</string>
    <string name="error_edulevel_req">Please choose option about your education.</string>
    <string name="erro_worktype_req">Please choose your interested jobs</string>
    <string name="error_locpermission_req">Please provide permission to check your location.</string>
    <string name="error_locationper_nogrant">Location permission not granted.</string>
    <string name="error_locationper_grant">Location permission is granted.</string>
    <string name="error_location_service">Please enable Location Service.</string>
    <string name="title_note">Note</string>
    <string name="err_try_again">Please close this app and try again.</string>
    <string name="err_usrnoname">Please provide your name.</string>
    <string name="title_editmobile">Update Phone Number</string>
    <string name="title_modifypropic">Change Profile Photo</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="err_no_comp_profile">We do not found your company information.Please create company profile once from Company Profile option in menu.After that create job posts.</string>
    <string name="error_no_usrprofupt">Information not submitted.Please verify your input detail and try again.</string>
    <string name="error_no_compost">No previous job post</string>
    <string name="err_create_comp_profile">Please fill company information for create job post!</string>
    <string name="title_language_change">Select Language</string>
    <string name="string_usrlan_en">English</string>
    <string name="string_usrlan_hi">Hindi</string>
    <string name="string_usropt">I want Work/Job</string>
    <string name="string_provopt">I want worker for Company</string>
    <string name="alert_compprofilecreate">Company profile created successfully.Now You can create new jobs</string>
    <string name="alert_compprofileupdate">Company profile changed successfully.</string>
    <string name="alertnewjobpost">Job created successfully.</string>
    <string name="action_doc_info">Delete</string>
    <string name="action_doc_book">View Applications</string>
    <string name="title_fill_req">Fill Requirements</string>
    <string name="title_fill_jobpost_req">Job Post Details</string>
    <string name="title_jobtitle">Job Title</string>
    <string name="hint_job_detail">Job Information and Requirements</string>
    <string name="title_jobtype">Job Type</string>
    <string name="title_jobvacency">Vacency</string>
    <string name="title_jobloc">Location</string>
    <string name="title_jobexpiry">Expiry</string>
    <string name="title_jobworktype">Type of work</string>
    <string name="title_jobworkshift">Work Shift</string>
    <string name="title_jobworkot">Overtime Limit</string>
    <string name="title_inter_time">Interview Time</string>
    <string name="title_inter_mode">Interview Mode</string>
    <string name="title_salary">Salary\n(monthly) </string>
    <string name="title_salary_monthly">Salary(monthly) </string>
    <string name="title_rupee_sym">\u20B9</string>
    <string name="title_sal_min">Min</string>
    <string name="title_sal_max">Max</string>
    <string name="title_usr_submitinfo">Submit</string>
    <string name="title_jobpost_date">Job Post Date</string>
    <string name="title_comp_id">Company ID</string>
    <string name="title_jobcategory">Job Category</string>
    <string name="title_salaryrange">Salary Range</string>
    <string name="title_view_job_app">View Job Applications</string>
    <string name="title_comp_name_only">Company</string>
    <string name="title_apply_job">Apply Job</string>
    <string name="title_address">Address</string>
    <string name="title_pincode">PinCode</string>
    <string name="title_provname">Name</string>
    <string name="title_contpername">Contect Person Name</string>
    <string name="title_designation">Designation</string>
    <string name="title_conperdesig">Contect Person\'s Designation</string>
    <string name="title_conpermob">Contect Person\'s Mobile</string>
    <string name="title_conpernameopt">Alt. Contect Name(optional)</string>
    <string name="title_conperdesigopt">Alt. Person\'s Desig.(optional)</string>
    <string name="title_conpermobopt">Alt. Mobile(optional)</string>
    <string name="title_industry_type">Industry Type</string>
    <string name="title_update">Update</string>
    <string name="title_jobappl_usrlist">Resume received </string>
    <string name="title_loginreg">Login Registration</string>
    <string name="title_choose_loginid">Enter your Name/Email</string>
    <string name="title_choose_mobileno">Enter your Mobile Number</string>
    <string name="title_mobile">Mobile</string>
    <string name="title_continue">Continue</string>
    <string name="title_cominformation">Your Company Information</string>
    <string name="title_com_info">Company Profile</string>
    <string name="title_create_jobpost">Create Job Post</string>
    <string name="title_communicate">Communicate</string>
    <string name="title_sharelink">Share Link</string>
    <string name="alert_jp_del">Are you sure for delete this job post ?</string>
    <string name="alert_callpermission_denied">Call permission denied!</string>
    <string name="title_benefits">Benefits</string>
    <string name="title_sel_benefits">Select Job Benefits</string>
    <string name="alert_no_jobapp_received">Info: No Job Application Recieved.</string>
    <string name="action_jobpost_feedback">Submit Your Feedback</string>
    <string name="title_activity_home">Karigar Jobs</string>
    <string name="title_activity_prejpapl">Previous Applied Jobs</string>
    <string name="title_editresume">Create/Edit Your Resume</string>
    <string name="title_editresume_rec">Build Resume by Recording</string>
    <string name="title_prvjobpostapp">Previous Job Applied</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Reload</string>
    <string name="jobcat_filter">Show selected Job Category</string>
    <string name="title_sel_jobcat">Select Job Category</string>
    <string name="title_activity_home_u">Karigar Jobs</string>
    <string name="title_jobpost_id">"JobPost ID: "</string>
    <string name="dialog_fill_detail">Do you want to create your Resume?</string>
    <string name="skip_launch">Skip</string>
    <string name="yes_launch">Yes</string>
    <string name="cv_info">Information</string>
    <string name="action_jobpost_status">Status</string>
    <string name="action_jobpost_detail">Job Detail</string>
    <string name="app_version">App Version</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_status_processing">Processing</string>
    <string name="err_fill_emptyfield">Required field(s) is/are empty.Please check the information</string>
    <string name="err_please_enter_validotp">Please enter valid OTP.</string>
    <string name="err_passwd_len_6char">Password length should be >6 character!</string>
    <string name="err_check_mobile_number">Please check again mobile number entered!</string>
    <string name="err_usr_profile_reterive">Error : Profile can\'t be reterived.Please check Internet Option.</string>
    <string name="err_req_field_empty">Required field(s) is/are empty!</string>
    <string name="err_usr_enter_value">Incorrect User ID ,mobile number or password is too short(>6).Please check enter value(s)!</string>
    <string name="err_same_id">UserID is already registered!.Choose different ID</string>
    <string name="err_loginupdate">User Login information not updated</string>
    <string name="info_create_resume">Create your Resume</string>
    <string name="title_job_post_id">Post ID: </string>
    <string name="alert_create_cv_to_applyjob">Please create your Resume from option menu before apply job!</string>
    <string name="alert_applyjob_success">Thank You.Job Applied successfully.Please contact to below information.</string>
    <string name="alert_applyagainjob_success">Job Applied Already.Please contact to below information.</string>
    <string name="alert_applyjob_info">Contact Information.</string>
    <string name="title_jpapplied_dt">Job Applied Date </string>
    <string name="title_jobname">Title </string>
    <string name="err_check_file_perm_settings">Please provide file read/write access from Setting option and try again.</string>
    <string name="title_your_dateofbirth">Choose your date of birth</string>
    <string name="title_user_curraddr">Enter your address</string>
    <string name="title_usr_curraddrpin">Enter pincode</string>
    <string name="title_usrmob">Enter your Mobile number</string>
    <string name="title_idtype_select">Select your ID type</string>
    <string name="title_idnum_enter">Enter selected ID number</string>
    <string name="title_your_profile">Your Profile</string>
    <string name="title_date_of_birth">Date of Birth</string>
    <string name="title_sex_type">Gender</string>
    <string name="title_curr_addr">Current Addr.</string>
    <string name="title_idtype">ID Type</string>
    <string name="title_idnum">ID Number</string>
    <string name="title_cur_salary">Current Salary</string>
    <string name="title_work_type">Work Type</string>
    <string name="title_choose_work_type">Choose your work type</string>
    <string name="title_list_work_type">Added Work type</string>
    <string name="title_next_14">Next(1/4)</string>
    <string name="title_verybad">Very Bad</string>
    <string name="title_bad">Bad</string>
    <string name="title_average">Average</string>
    <string name="title_good">Good</string>
    <string name="title_excellent">Very Good</string>
    <string name="title_ratefeed">How do you rate this job post experience</string>
    <string name="title_expifany">Write your Job Post Feedback(if any)</string>
</resources>