<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:text="@string/title_ratefeed"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="241dp"
            android:layout_marginTop="50dp"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:visibility="gone"
            android:textSize="18sp" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radiogp_ratefeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:layout_marginStart="0dp"
            >
            <RadioButton android:id="@+id/radio_verybad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_verybad"
                />
            <RadioButton android:id="@+id/radio_bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_bad"
                />
            <RadioButton android:id="@+id/radio_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_average"
                />

            <RadioButton android:id="@+id/radio_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_good"
                />
            <RadioButton android:id="@+id/radio_excellent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_excellent"
                />
        </RadioGroup>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="290dp"
            android:text="@string/title_expifany"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="340dp"
            android:background="@drawable/shape"
            android:inputType="textMultiLine"
            android:lines="8"
            android:scrollbars="vertical"
            android:gravity="top|start"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>