<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".user.FragUsrProfOneCreate">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">



        <TextView
            android:id="@+id/textView_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/title_your_profile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />



        <Button
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary"
            android:text="@string/title_next_14"
            android:textColor="@color/backgrdstart"
            android:textStyle="normal"
            />

    </RelativeLayout>


    <ScrollView
           android:layout_width="match_parent"
           android:layout_height="600dp"
           android:layout_marginBottom="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:text="@string/title_provname"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/title_date_of_birth"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="@string/title_your_dateofbirth"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="150dp"
            android:text="@string/title_sex_type"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/editspinner1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/shape"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:text="@string/title_curr_addr"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="@string/title_user_curraddr" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="250dp"
            android:text="@string/title_pincode"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="250dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="@string/title_usr_curraddrpin"/>


<!--        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="300dp"
            android:text="@string/title_parman_addr"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="350dp"
            android:text="@string/title_pincode"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="350dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp" />-->


        <TextView
            android:id="@+id/textView8"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="300dp"
            android:text="@string/title_mobile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="@string/title_usrmob"
            android:ems="10"
            android:inputType="phone"/>


<!--        <TextView
            android:id="@+id/textView9"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="450dp"
            android:text="@string/title_alt_mobile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="450dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp" />-->


        <TextView
            android:id="@+id/textView10"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="350dp"
            android:text="@string/title_idtype"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/editspinner2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="350dp"
            android:background="@drawable/shape"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="@string/title_idtype_select"/>



        <TextView
            android:id="@+id/textView11"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="400dp"
            android:text="@string/title_idnum"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hint="@string/title_idnum_enter"/>



<!--        <TextView
            android:id="@+id/textView15"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="600dp"
            android:text="@string/prompt_email"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="600dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp" />-->


        <TextView
            android:id="@+id/textView12"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="450dp"
            android:text="@string/title_cur_salary"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="450dp"
            android:background="@drawable/shape"
            android:textAlignment="center"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="500dp"
            android:text="@string/title_work_type"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/editspinner3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="500dp"
            android:background="@drawable/shape"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            android:textSize="18sp"
            android:tooltipText="@string/title_choose_work_type"
            android:hint="@string/title_choose_work_type"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="550dp"
            android:text="@string/title_list_work_type"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="600dp">

            <RelativeLayout
                android:id="@+id/itemlist_layout"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginLeft="5dp">



            </RelativeLayout>
        </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>



